2004-04-15  Miguel de Icaza  <miguel@ximian.com>

	* iterators.cs (MarkYield): track whether we are in an exception,
	and generate code accordingly.  Use a temporary value to store the
	result for our state.

	I had ignored a bit the interaction of try/catch with iterators
	since their behavior was not entirely obvious, but now it is
	possible to verify that our behavior is the same as MS .NET 2.0

	Fixes 54814

2004-04-14  Miguel de Icaza  <miguel@ximian.com>

	* iterators.cs: Avoid creating temporaries if there is no work to
	do. 

	* expression.cs (ArrayAccess.EmitLoadOpcode): If dealing with
	Enumerations, use TypeManager.EnumToUnderlying and call
	recursively. 

	Based on the patch from Benjamin Jemlich (pcgod@gmx.net), fixes
	bug #57013

	(This.Emit): Use EmitContext.EmitThis to emit our
	instance variable.

	(This.EmitAssign): Ditto.

	* ecore.cs (FieldExpr.Emit): Remove RemapToProxy special
	codepaths, we will move all the functionality into
	Mono.CSharp.This 

	(FieldExpr.EmitAssign): Ditto.

	This fixes several hidden bugs that I uncovered while doing a code
	review of this today.

	* codegen.cs (EmitThis): reworked so the semantics are more clear
	and also support value types "this" instances.

	* iterators.cs: Changed so that for iterators in value types, we
	do not pass the value type as a parameter.  

	Initialization of the enumerator helpers is now done in the caller
	instead of passing the parameters to the constructors and having
	the constructor set the fields.

	The fields have now `assembly' visibility instead of private.

2004-04-11  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (Argument.Resolve): Check if fields passed as ref
	or out are contained in a MarshalByRefObject.

	* typemanager.cs, rootcontext.cs: Add System.Marshalbyrefobject as
	another compiler type.

2004-04-06 Ben Maurer  <bmaurer@users.sourceforge.net>

	* class.cs (Indexer.Define): use the new name checking method.
	Also, return false on an error.